# src/api/gen/model/index.ts
@@ -216,6 +216,7 @@ export * from './reviewPassage';
 export * from './reviewPassageKind';
 export * from './reviewQuestion';
 export * from './reviewQuestionOutcome';
+export * from './reviewWritingMark';
 export * from './runnerChoice';
 export * from './runnerPassage';
 export * from './runnerPassageKind';
@@ -287,6 +288,7 @@ export * from './writingCriterion';
 export * from './writingCriterionScore';
 export * from './writingDraft';
 export * from './writingGrade';
+export * from './writingGradeRunResult';
 export * from './writingIssue';
 export * from './writingIssueKind';
 export * from './writingLengthRange';
